--- a/www/index.html
+++ b/www/index.html
@@ -24,8 +24,15 @@
         <p class="event listening">Connecting to Device</p>
         <p class="event received">Device is Ready</p>
       </div>
+      <div class="user-actions">
+        <br/>
+        <div><a href="qas/new.html" class="go-qa-add-btn">说个秘密</a></div>
+        <div><a href="qas/index.html" class="go-qa-guess-btn"> 去猜秘密</a></div>
+        <div><a href="#" class="user-ranking"> 得分排行</a></div>
+      </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
+
