添加吐司提示消息

--- a/www/qas/index.html
+++ b/www/qas/index.html
@@ -18,10 +18,11 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="/cordova.js"></script>
-    <script type="text/javascript" src="/js/vue.js"></script>
-    <script type="text/javascript" src="/js/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/qas.js"></script>
+    <script type="text/javascript" src="../cordova.js"></script>
+    <script type="text/javascript" src="../js/vue.js"></script>
+    <script type="text/javascript" src="../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../js/Toast.js"></script>
+    <script type="text/javascript" src="../js/qas.js"></script>
   </body>
 </html>
 
