--- a/www/index.html
+++ b/www/index.html
@@ -10,12 +10,12 @@
       * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
         * Enable inline JS: add 'unsafe-inline' to default-src
     -->
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
+    <title>猜秘密</title>
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;"> -->
     <meta name="format-detection" content="telephone=no">
     <meta name="msapplication-tap-highlight" content="no">
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/index.css">
-    <title>猜秘密</title>
   </head>
   <body>
     <div class="app">
@@ -28,10 +28,12 @@
         <br/>
         <div><a href="qas/new.html" class="go-qa-add-btn">说个秘密</a></div>
         <div><a href="qas/index.html" class="go-qa-guess-btn"> 去猜秘密</a></div>
+        <!-- onclick="window.plugins.toast.showShortTop('去猜秘密', function(e){console.log('toast success: ' + e)}, function(b){alert('toast error: ' + b)})" -->
         <div><a href="#" class="user-ranking"> 得分排行</a></div>
       </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
+    <script type="text/javascript" src="js/Toast.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
