--- a/www/qas/index.html
+++ b/www/qas/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <title>猜秘密-最新秘密</title>
@@ -10,10 +10,10 @@
   </head>
   <body>
     <div class="container container-qas">
-      <h3>秘密列表</h3>
+      <h3>秘密都在这~~</h3>
       <div class="qa-list" v-for="(qa,index) in items">
         <div class="qa-item">
-          <div class="">{{index+1}}.{{statuses[qa.status]}} {{qa.show_type === 'unsigned' ? '匿名' : qa.owner.name}}问 {{qa.content}} {{qa.guesses.length}}人已猜</div>
+          <div class="" @click=goQaViewTap(qa)>{{index+1}}.{{statuses[qa.status]}} {{qa.show_type === 'unsigned' ? '匿名' : qa.owner.name}}问 {{qa.content}} {{qa.guesses.length}}人已猜</div>
         </div>
       </div>
     </div>
@@ -22,7 +22,8 @@
     <script type="text/javascript" src="../js/vue.js"></script>
     <script type="text/javascript" src="../js/jquery.min.js"></script>
     <script type="text/javascript" src="../js/Toast.js"></script>
-    <script type="text/javascript" src="../js/qas.js"></script>
+    <script type="text/javascript" src="../js/utils.js"></script>
+    <script type="text/javascript" src="../js/qas/qas.js"></script>
   </body>
 </html>
 
