接入微信登录，待替换微信 AppID

--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,8 @@
     <div class="app">
       <h1>猜秘密</h1>
       <div id="deviceready" class="blink">
-        <p class="event listening">Connecting to Device</p>
-        <p class="event received">Device is Ready</p>
+        <p class="event listening">加载中...</p>
+        <p onclick="app.goWxLogin()" class="event received">微信登录</p>
       </div>
       <div class="user-actions">
         <br/>
