添加分享秘密页面功能

--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
         <div><a href="qas/new.html" class="go-qa-add-btn">说个秘密</a></div>
         <div><a href="qas/index.html" class="go-qa-guess-btn"> 去猜秘密</a></div>
         <!-- onclick="window.plugins.toast.showShortTop('去猜秘密', function(e){console.log('toast success: ' + e)}, function(b){alert('toast error: ' + b)})" -->
-        <div><a href="#" class="user-ranking"> 得分排行</a></div>
+        <div><a href="#" class="user-ranking" onclick="window.plugins.toast.showLongTop('暂时未开放')""> 得分排行</a></div>
       </div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
