调试微信登录

--- a/www/index.html
+++ b/www/index.html
@@ -22,8 +22,8 @@
       <h1>猜秘密</h1>
       <div id="deviceready" class="blink">
         <p class="event listening">加载中...</p>
-        <!-- <p onclick="app.goWxLogin()" class="event received">微信登录</p> -->
-        <p onclick="app.testerLogin(false)" class="event received">匿名登录</p>
+        <p onclick="app.goWxLogin()" class="event received">微信登录</p>
+        <!-- <p onclick="app.testerLogin(false)" class="event received">匿名登录</p> -->
       </div>
       <div class="user-actions">
         <br/>
